--- a/ditweb/templates/main_template.html
+++ b/ditweb/templates/main_template.html
@@ -5,13 +5,13 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'tomatis/favicon.png' %}"/>
     <link rel="stylesheet" type="text/javascript" src="{% static 'tomatis/jquery-3.5.1.min.js' %}" />
   
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Responsive sidebar template with sliding effect and dropdown menu based on bootstrap 3">
@@ -21,7 +21,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
-	<title>AGOS</title>
+    <title>AGOS</title>
 
  <style>
 .sidenav {
@@ -51,6 +51,22 @@
 
 .sidebar-custom { 
     background-color: #111;
+    background: #111;
+        /*z-index: 1000;*/
+            /*height: calc(100vh - 254px);*/
+    position: fixed;
+    /*left: 175px;*/
+    /*top: -132px;*/
+    /*bottom: 0px;*/
+    /*margin-left: -175px;*/
+    /*max-height: 1450px;*/
+    height: 100%;
+    overflow-y: auto;
+    /*background: #222222;*/
+    /*-webkit-transition: all 0.5s ease;*/
+    /*-moz-transition: all 0.5s ease;*/
+    /*-o-transition: all 0.5s ease;*/
+    /*transition: all 0.5s ease;*/
 } 
 
 
@@ -75,9 +91,15 @@
 }
 
 /* Style page content */
-.main {
+.main_old {
   margin-left: 200px; /* Same as the width of the sidebar */
   margin-top: 80px;
+  padding: 0px 10px;
+}
+
+.main {
+  margin-top: 50px;
+  margin-left: 220px;
   padding: 0px 10px;
 }
 
@@ -105,7 +127,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
             <li class="nav-item">
-                <a class="nav-link" href="/admin/">  Admin  <i class="fa fa-key fa-lg" style="color:gold;"></i><!-- <span class="sr-only">(current)</span> --></a>
+                <a class="nav-link" href="/admin/">  Admin  <i class="fa fa-key fa-fw" style="color:brown;"></i><!-- <span class="sr-only">(current)</span> --></a>
             </li>
           <!--   <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -122,8 +144,72 @@
     </nav>
 
  <!-- Side navigation -->
+
+<div class="container-fluid">
+    <div class="row min-vh-100 flex-column flex-md-row">
+        <aside class="col-12 col-md-2 p-0 sidebar-custom flex-shrink-1">
+            <nav class="navbar navbar-expand navbar-dark flex-md-column flex-row align-items-start py-2">
+                <div class="collapse navbar-collapse ">
+                    <ul class="flex-md-column mt-6 flex-row navbar-nav w-100 justify-content-between">
+                        <li class="nav-item">
+                            <a class="nav-link pl-0 text-nowrap mt-6" href="/"><i class="fa fa-bullseye fa-fw"></i> <span class="font-weight-bold">Dashboard</span></a>
+                        </li>
+                        <li class="nav-item {% if request.resolver_match.url_name == "index" %}active{% endif %}">
+                            <a class="nav-link pl-0 text-nowrap" href="{% url "index" %}"><i class="fas fa-home fa-fw"></i> <span class="font-weight-bold">Dashboard</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0 dropdown-toggle" href="#tomatSubmenu" data-toggle="collapse" aria-expanded="true"><i class="fas fa-rocket fa-fw"></i> <span class="font-weight-bold d-none d-md-inline">Otomasi</span></a>
+                            <ul class="list collapse show flex-md-column flex-row navbar-nav ml-3 w-100 justify-content-between" id="tomatSubmenu">
+
+                                <li class="nav-item {% if request.resolver_match.url_name == "devices" %}active{% endif %}">
+                                    <a class="nav-link pl-0" href="{% url "devices" %}"><i class="fa fa-star fa-fw"></i> <span class="d-none d-md-inline">Devices</span></a>
+                                        </li>
+                                <li class="nav-item {% if request.resolver_match.url_name == "config" %}active{% endif %}">
+                                    <a class="nav-link pl-0" href="{% url "config" %}"><i class="fa fa-cog codeply fa-fw"></i> <span class="d-none d-md-inline">Configure</span></a>
+                                </li>
+                                <li class="nav-item {% if request.resolver_match.url_name == "verify_result" %}active{% endif %}">
+                                    <a class="nav-link pl-0" href="{% url "verify_result" %}"><i class="fa fa-heart codeply fa-fw"></i> <span class="d-none d-md-inline">Verify</span></a>
+                                </li>
+                                <li class="nav-item {% if request.resolver_match.url_name == "log" %}active{% endif %}">
+                                    <a class="nav-link pl-0" href="{% url "log" %}"><i class="fa fa-book codeply fa-fw"></i> <span class="d-none d-md-inline">Log</span></a>
+                                </li>
+                                <li class="nav-item {% if request.resolver_match.url_name == "nmap" %}active{% endif %}">
+                                    <a class="nav-link pl-0" href="{% url "nmap" %}"><i class="fa fa-bullseye codeply fa-fw"></i> <span class="d-none d-md-inline">Network Mapper</span></a>
+                                </li>
+                                
+                            </ul>
+                        </li>
+                        
+                        <li class="nav-item {% if request.resolver_match.url_name == "sdn" %}active{% endif %}">
+                            <a class="nav-link pl-0" href="/onos/ui" onclick="javascript:event.target.port=8181" target="_blank"><i class="fas fa-network-wired codeply fa-fw"></i> <span class="d-none d-md-inline font-weight-bold">SDN</span></a>
+                        </li>
+                        <li class="nav-item {% if request.resolver_match.url_name == "tentang" %}active{% endif %}">
+                            <a class="nav-link pl-0" href="{% url "tentang" %}"><i class="fas fa-info-circle fa-fw"></i> <span class="d-none d-md-inline font-weight-bold">Tentang</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </aside>
+        <main class="main col bg-faded py-3 flex-grow-1">
+
+            {% load django_bootstrap_breadcrumbs %}
+
+            {% block breadcrumbs %}
+                {% clear_breadcrumbs %}
+                {% breadcrumb "Home" "/" %}
+                
+            {% endblock %}
+
+            {% block content %}
+                {% render_breadcrumbs "django_bootstrap_breadcrumbs/bootstrap4.html" %}
+            {% endblock %}
+
+        </main>
+    </div>
+</div>
+<!-- 
 <div class="sidenav">
-     <a href="/">--</a> <!--Placeholder -->
+
   <a href="/" class="border-left-0 rounded-right border-success"><i class="fas fa-home" style="font-size:20px;color:grey"></i> Dashboard</a>
   <li class="card active sidebar-custom">
                 <a href="#tomatSubmenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle card-header"><i class="fas fa-rocket" style="font-size:20px;color:grey"></i> Otomasi</a>
@@ -145,19 +231,15 @@
                     </li>
                 </ul>
             </li>
-  <!-- <a href="/otomatis/">Otomatis</a> -->  
   <a href="/sdn/" class="border-left-0 rounded-right border-danger"><i class="fas fa-network-wired" style="font-size:20px;color:grey"></i> SDN</a> 
   <a href="/about/" class="border-left-0 rounded-right border-warning"><i class="fas fa-info-circle" style="font-size:20px;color:grey"></i> Tentang</a>
 </div>
 
-<!-- Page content -->
-<div class="main">
+ -->
 
-{% block content %}
 
-{% endblock %}
 
-</div> 
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -165,7 +247,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-
+    <script>
+        document.addEventListener('click', function(event) {
+      var target = event.target;
+      if (target.tagName.toLowerCase() == 'a')
+      {
+          var port = target.getAttribute('href').match(/^:(\d+)(.*)/);
+          if (port)
+          {
+             target.href = window.location.origin;
+             target.port = port[1];
+          }
+      }
+    }, false);
+    </script>
 
 </body>
 </html>
